<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.logIn.ChangePasswordFragment">


        <ScrollView
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <LinearLayout
                android:padding="@dimen/dimens_xxl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/dimen_10xl"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/dimen_10xl"
                    android:src="@drawable/ic_logo"
                    android:layout_marginBottom="@dimen/dimens_xl"/>
                <TextView
                    style="@style/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_code"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimens_xl"
                    />
                <EditText
                    android:id="@+id/Fragment_Change_Password_Cb_Check_Code"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/check_code"/>
                <EditText
                    android:id="@+id/Fragment_Change_Password_Cb_New_Password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    />
                <EditText
                    android:id="@+id/Fragment_Change_Password_et_Confirm_Password"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"/>
                <Button
                    android:id="@+id/Fragment_Change_Password_btn_ChangePassword"
                    style="@style/GreenButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"/>
            </LinearLayout>
        </ScrollView>


</FrameLayout>