<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimens_l"
    tools:context=".ui.fragment.logIn.ForgetPasswordFragment">
    <LinearLayout
        android:paddingTop="@dimen/dimens_l"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <ImageView
            android:layout_width="@dimen/dimen_10xl"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/dimen_10xl"
            android:src="@drawable/ic_logo"
            android:layout_marginBottom="@dimen/dimens_l"/>
        <TextView
            style="@style/text"
            android:padding="@dimen/dimens_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_forget_password"
            android:layout_gravity="center_horizontal"/>
        <EditText
            android:id="@+id/Frgment_Forget_Password_Ed_Mobile"
            style="@style/EditText"
            android:hint="@string/mobile"/>
        <Button
            android:layout_marginTop="@dimen/dimens_l"
            style="@style/GreenButton"
            android:id="@+id/Fragment_Forget_Password_Btn_Change_Password"
            android:text="@string/change_password"/>
    </LinearLayout>

</LinearLayout>
